# app/Http/Controllers/User/UserController.php
@@ -36,4 +36,33 @@ class UserController extends Controller
         return response('Hello World', 200)
         ->header('Content-Type', 'text/plain');
     }
+
+    /**
+     * @OA\Get(
+     *      path="/api/user/test",
+     *      operationId="testFunction",
+     *      tags={"user"},
+     *      summary="test summary",
+     *      description="This is a test description",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
+
+    public function test()
+    {
+        return response('Hello World!!!', 200)
+            ->header('Content-Type', 'text/plain');
+    }
 }
