# storage/api-docs/api-docs.json
@@ -242,6 +242,32 @@
                     }
                 }
             }
+        },
+        "/api/user/test": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "test summary",
+                "description": "This is a test description",
+                "operationId": "testFunction",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     },
     "tags": [
